feature/routing rotuing complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div text-align ="center">
 <h1>Tour of Heroes</h1>
 </div>
-<app-hero-list></app-hero-list>
+<nav>
+  <a routerLink="/heroList">Heroes</a>
+</nav>
+<router-outlet></router-outlet>
