dashboard component and styling done. pending test cases

--- a/src/app/hero-list/hero-list.component.html
+++ b/src/app/hero-list/hero-list.component.html
@@ -1,20 +1,23 @@
-<div>
-  <table>
-    <tr>
+<table class="table table-sm table-hover table-bordered">
+  <thead class="mdb-color darken-3">
+    <tr class="text-white">
       <th>ID</th>
       <th>Name</th>
     </tr>
+  </thead>
+  <tbody>
     <tr (click) = "clickHero(hero)" *ngFor="let hero of heroes">
       <td>{{hero.id}}</td>
       <td>{{hero.name}}</td>
     </tr>
-  </table>
-</div>
-
+  </tbody>
+</table>
+<br/>
 <div *ngIf = "heroDetails">
-  <a routerLink="/viewDetails/{{heroDetails.id}}">View Details</a>
+  <a class="btn btn-primary waves-light" routerLink="/viewDetails/{{heroDetails.id}}" mdbRippleRadius>View Details of {{heroDetails.name}}</a>
 </div>
 
+<br />
 <div>
-  <button (click)="goBack()">Back</button>
+  <a class="btn btn-primary waves-light" mdbRippleRadius (click)="goBack()">Back</a>
 </div>
