--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,25 @@
-<div text-align ="center">
-<h1>Tour of Heroes</h1>
-</div>
-<nav>
-  <a routerLink="/heroList">Heroes</a>
-</nav>
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark indigo">
+   <a class="navbar-brand" href="#">Tour Of Heroes</a>
+    <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link waves-light" mdbRippleRadius routerLink="/dashboard">Dashboard<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link waves-light" mdbRippleRadius routerLink="/heroList">Heroes</a>
+            </li>
+        </ul>
+
+        <form class="form-inline  waves-light" mdbRippleRadius>
+            <input class="form-control mr-sm-2" type="text" placeholder="Search">
+        </form>
+</mdb-navbar>
+
 <router-outlet></router-outlet>
+
+<footer class="page-footer indigo center-on-small-only">
+<div class="footer-copyright">
+        <div class="container-fluid">
+            © 2018 Copyright: <a href="https://github.com/skasgarv">Skasgarv</a>
+        </div>
+    </div>
+</footer>
