--- a/src/app/view-details/view-details.component.html
+++ b/src/app/view-details/view-details.component.html
@@ -6,5 +6,11 @@
       <input [(ngModel)]="heroDetails.name" placeholder="name"/>
     </label>
   </div>
-  <button (click)="saveDetails(heroDetails)">Save Details</button>
+  <div>
+    <a class="btn btn-primary waves-light" mdbRippleRadius (click)="saveDetails(heroDetails)">Save Details</a>
+  </div>
+</div>
+
+<div>
+  <a class="btn btn-primary waves-light" mdbRippleRadius (click)="goBack()">Back</a>
 </div>
