feature/testcase working on it still to fix the test cases

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,14 @@
             <li class="nav-item">
                 <a class="nav-link waves-light" mdbRippleRadius routerLink="/heroList">Heroes</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link waves-light" mdbRippleRadius routerLink="testCases">Test Cases</a>
+            </li>
         </ul>
 
-        <form class="form-inline  waves-light" mdbRippleRadius>
+        <!-- <form class="form-inline  waves-light" mdbRippleRadius>
             <input class="form-control mr-sm-2" type="text" placeholder="Search">
-        </form>
+        </form> -->
 </mdb-navbar>
 
 <router-outlet></router-outlet>
