--- a/src/app/view-details/view-details.component.html
+++ b/src/app/view-details/view-details.component.html
@@ -1,3 +1,4 @@
+<app-hero-list></app-hero-list>
 <div>
   <h2>{{ heroDetails.name | uppercase }} Details</h2>
   <div><span>id: </span>{{heroDetails.id}}</div>
