feature/lazyloading complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,10 @@
                 <a class="nav-link waves-light" mdbRippleRadius routerLink="/heroList">Heroes</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link waves-light" mdbRippleRadius routerLink="testCases">Test Cases</a>
+                <a class="nav-link waves-light" mdbRippleRadius routerLink="/testCases">Test Cases</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link waves-light" mdbRippleRadius routerLink="/lazyComponent">Lazy Loader</a>
             </li>
         </ul>
 
