minor code refractor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
 <footer class="page-footer indigo center-on-small-only">
 <div class="footer-copyright">
         <div class="container-fluid">
-            © 2018 Copyright: <a href="https://github.com/skasgarv">Skasgarv</a>
+            © 2018 Copyright: <a href="https://github.com/skasgarv/tourofheroes/">Skasgarv</a>
         </div>
     </div>
 </footer>
